--- a/debian/control
+++ b/debian/control
@@ -2,14 +2,14 @@ Source: howdy
 Section: misc
 Priority: optional
 Standards-Version: 3.9.7
-Build-Depends: python, dh-python, devscripts, dh-make, debhelper, fakeroot
-Maintainer: boltgolt <boltgolt@gmail.com>
-Vcs-Git: https://github.com/boltgolt/howdy
+Build-Depends: python3, dh-python, devscripts, dh-make, debhelper, fakeroot
+Maintainer: thecalamityjoe87 <calamityjoe87@gmail.com>
+Vcs-Git: https://github.com/thecalamityjoe87/howdy
 
 Package: howdy
-Homepage: https://github.com/boltgolt/howdy
+Homepage: https://github.com/thecalamityjoe87/howdy
 Architecture: all
-Depends: ${misc:Depends}, curl|wget, python3, python3-pip, python3-dev, python3-setuptools, libpam-python, libopencv-dev, cmake
+Depends: ${misc:Depends}, curl|wget, python3, python3-pip, python3-numpy, python3-dev, python3-setuptools, libpam-python, libopencv-dev, cmake
 Recommends: libatlas-base-dev | libopenblas-dev | liblapack-dev, streamer
 Suggests: nvidia-cuda-dev (>= 7.5)
 Description: Howdy: Windows Hello style authentication for Linux.
