--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,7 @@ Vcs-Git: https://github.com/thecalamityjoe87/howdy
 Package: howdy
 Homepage: https://github.com/thecalamityjoe87/howdy
 Architecture: all
-Depends: ${misc:Depends}, curl|wget, python3, python3-pip, python3-numpy, python3-dev, python3-setuptools, libpam-python, libopencv-dev, cmake
+Depends: ${misc:Depends}, curl|wget, python3, python3-pip, python3-numpy, python3-opencv, python3-dev, python3-setuptools, libpam-python, libopencv-dev, cmake
 Recommends: libatlas-base-dev | libopenblas-dev | liblapack-dev, streamer
 Suggests: nvidia-cuda-dev (>= 7.5)
 Description: Howdy: Windows Hello style authentication for Linux.
